Responsivness: Add new breakpoint for extra extra small device screen (max-width: 320px); Navbar: Fix layout on mobile screen and extra extra small screen; Hero Section, About Section, Feature Section: Improve responsiveness from min screen width 1200px to max screen width 320px

--- a/Website Development/Front End/Portfolio/assets/css/style.css
+++ b/Website Development/Front End/Portfolio/assets/css/style.css
@@ -434,15 +434,12 @@ body {
 header {
   background: linear-gradient(135deg, transparent, rgba(0, 0, 64, 0.4));
   backdrop-filter: blur(40px);
-  height: 100px;
+  width: 100%;
   position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
   z-index: 2;
-  text-shadow: 0 6px 12px #000;
 }
 header .utility {
+  height: 40px;
   padding: 0 1em;
   display: flex;
   flex-direction: row;
@@ -492,12 +489,22 @@ header .utility .theme-toggler input[type=checkbox] {
 }
 header nav {
   background: var(--nav-background);
-  padding: 0 2em;
+  height: 60px;
+  padding: 2em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  transition: 0.3s;
+}
+header nav .nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+header nav .nav-list .nav-list-item .nav-link {
+  text-decoration: none;
 }
 header nav .brand .brand-link {
   background: linear-gradient(45deg, #04F, #0F4);
@@ -507,29 +514,6 @@ header nav .brand .brand-link {
   text-decoration: none;
   font-size: 1.5em;
   font-weight: var(--font-weight-semibold);
-}
-header nav .nav-list {
-  max-height: 240px;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 1em;
-}
-header nav .nav-list .nav-list-item {
-  padding: 0 0.6em;
-}
-header nav .nav-list .nav-list-item .nav-link {
-  padding: 0.6em;
-  color: var(--text-primary-450);
-  border-radius: 6px;
-  text-decoration: none;
-  transition: 0.3s;
-}
-header nav .nav-list .nav-list-item .nav-link.active,
-header nav .nav-list .nav-list-item .nav-link:hover {
-  color: var(--text-primary-200);
 }
 header nav .cta .cta-button {
   background: var(--cta-background);
@@ -549,21 +533,21 @@ header nav .cta .cta-button:active {
   background-color: var(--cta-active-background);
 }
 header nav .navbar-toggler {
-  width: 30px;
+  width: 2em;
   display: none;
   cursor: pointer;
+  transform-origin: 0 100%;
 }
 header nav .navbar-toggler span {
   background: var(--color-neutral-200);
-  width: 100%;
+  width: 4px;
   height: 4px;
   margin: 5px;
   display: block;
   border-radius: 6px;
 }
-header nav.scrolled {
-  background: var(--nav-scrolled-background);
-  backdrop-filter: blur(8px);
+header nav .navbar-toggler.show span {
+  width: 100%;
 }
 
 main {
@@ -571,6 +555,7 @@ main {
   justify-content: center;
 }
 main section {
+  max-width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -587,9 +572,8 @@ main section .section-body {
   padding: 0 2em;
 }
 main section#hero {
-  background: linear-gradient(225deg, rgba(40, 164, 223, 0.6) 10%, transparent 80%);
   background-size: cover;
-  max-height: 600px;
+  max-height: 800px;
   height: 100vh;
   margin-top: -100px;
 }
@@ -607,7 +591,6 @@ main section#hero .section-body .herousel {
   justify-content: center;
   align-items: center;
   gap: 2em;
-  position: relative;
 }
 main section#hero .section-body .herousel .herousel-list {
   padding: 0 4em;
@@ -617,7 +600,7 @@ main section#hero .section-body .herousel .herousel-list .herousel-list-item {
   display: none;
 }
 main section#hero .section-body .herousel .herousel-list .herousel-list-item .copytext {
-  width: 40%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -625,10 +608,10 @@ main section#hero .section-body .herousel .herousel-list .herousel-list-item .co
   gap: 1em;
 }
 main section#hero .section-body .herousel .herousel-list .herousel-list-item .copytext .hero-headline {
-  font-size: clamp(16px, 4vw + 1rem, 32px);
+  font-size: clamp(1em, 4vw, 2em);
 }
 main section#hero .section-body .herousel .herousel-list .herousel-list-item .copytext .hero-description {
-  font-size: clamp(8px, 4vw + 0.8rem, 16px);
+  font-size: clamp(0.4em, 4vw, 1em);
 }
 main section#hero .section-body .herousel .herousel-list .herousel-list-item .copytext .cta {
   width: 100%;
@@ -691,6 +674,7 @@ main section#hero .section-body .herousel .herousel-navigation #herousel-next-bu
   border-radius: 100vmax;
   position: absolute;
   top: 50%;
+  cursor: pointer;
 }
 main section#hero .section-body .herousel .herousel-navigation #herousel-previous-button {
   left: 1em;
@@ -700,8 +684,6 @@ main section#hero .section-body .herousel .herousel-navigation #herousel-next-bu
 }
 main section#about {
   background: url(../img/drawable/fotor-ai4.jpg);
-  max-height: 600px;
-  min-height: 100vh;
 }
 main section#about .container {
   background: linear-gradient(45deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
@@ -770,7 +752,7 @@ main section#feature .section-body .feature-list {
   list-style: none;
 }
 main section#feature .section-body .feature-list .feature-list-item {
-  min-width: 400px;
+  min-width: 200px;
   flex: 1;
 }
 main section#feature .section-body .feature-list .feature-list-item .card {
@@ -1076,17 +1058,47 @@ footer .footer-nav .nav-list .nav-list-item .nav-link:active {
   color: var(--text-link-200);
 }
 
+/* Extra extra small device*/
+@media only screen and (max-width: 320px) {
+  header .utility {
+    height: max-content;
+    flex-direction: column-reverse;
+  }
+  header nav {
+    height: max-content;
+    flex-direction: column;
+  }
+  header nav .nav-list.show[role=list] {
+    height: 100%;
+    background: black;
+    top: 20.6em;
+  }
+  main section#about .section-body .picture-of-me img {
+    max-width: 120px;
+  }
+  main section#feature .section-body .feature-list .feature-list-item {
+    min-width: unset;
+    max-width: 10em;
+    width: 100%;
+  }
+  main section#feature .section-body .feature-list .feature-list-item .card {
+    height: unset;
+  }
+  footer .footer-nav {
+    flex-direction: column;
+  }
+  footer .footer-nav .nav-list {
+    flex-direction: column;
+  }
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .page-wrapper {
     max-width: 600px;
-    padding: 1em;
   }
-  main section#hero .section-body .herousel .herousel-list-item .copytext .hero-headline {
-    font-size: 16px;
-  }
-  main section#hero .section-body .herousel .herousel-list-item .copytext .hero-description {
-    font-size: 8px;
+  main section#hero {
+    height: 400px;
+    margin-top: 0;
   }
   main section#about .section-body {
     grid-template-columns: 1fr;
@@ -1108,32 +1120,30 @@ footer .footer-nav .nav-list .nav-list-item .nav-link:active {
 }
 @media only screen and (max-width: 1200px) {
   header nav .nav-list {
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(40px);
+    height: 0px;
     display: none;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 100px;
     left: 0;
-    gap: 0;
-  }
-  header nav .nav-list .nav-list-item {
-    width: 100%;
-    padding: 1em;
-    text-align: center;
-    backdrop-filter: blur(40px);
+    right: 0;
   }
   header nav .nav-list.show {
+    height: calc(100vh - 100px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+  }
+  header nav .cta {
+    display: none;
   }
   header nav .navbar-toggler {
     display: block;
   }
-  header .cta {
-    display: none;
+  main section#hero {
+    margin-top: 0px;
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
